implemento do titulo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bela e a Fera</title>
 </head>
 <body>
-    
+    <header> 
+   <h1>Beauty and the Beast</h1>
+</header>
 </body>
 </html>
+<!-- https://tangy-raccoon-374.notion.site/Atividade-Display-Flex-112868788a8680c5bb03d0e071e1b50d -->
