emplemento de um paragrafo e uma imagem

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Bela e a Fera</title>
 </head>
 <body>
-    <header> 
-   <h1>Beauty and the Beast</h1>
-</header>
+    <header>
+        <h1>Beauty and the Beast</h1>
+    </header>
+    <main>
+        <div class="primeira">
+            <p>Conta a história de uma bondosa jovem que passa a viver com uma criatura monstruosa em seu castelo e os dois acabam se apaixonando.</p>
+            <img src="./a-bela-e-a-fera.jpeg" alt="Imagem ilustrativa da princesa Bela dançando com a Fera">
+        </div>
+    </main>
 </body>
 </html>
-<!-- https://tangy-raccoon-374.notion.site/Atividade-Display-Flex-112868788a8680c5bb03d0e071e1b50d -->
