Finalizacao do projeto

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     </header>
     <main>
         <div class="primeira">
-            <p>Em A Bela e a Fera, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade dele. No castelo, ela conhece objetos mágicos e descobre que a Fera é, na verdade, um príncipe que precisa de amor para voltar à forma humana12. O longa é centrado em um príncipe que é transformado em uma Fera e uma jovem mulher chamada Bela que ele aprisiona em seu castelo3. Bela deseja viajar e viver aventuras muito maiores do que o lugar onde vive pode oferecer</p>
+            <p>Em A Bela e a Fera, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade dele. No castelo, ela conhece objetos mágicos e descobre que a Fera é, na verdade, um príncipe que precisa de amor para voltar à forma humana. O longa é centrado em um príncipe que é transformado em uma Fera e uma jovem mulher chamada Bela que ele aprisiona em seu castelo. Bela deseja viajar e viver aventuras muito maiores do que o lugar onde vive pode oferecer</p>
             <img src="./a-bela-e-a-fera.jpeg" alt="Imagem ilustrativa da princesa Bela dançando com a Fera">
         </div>
         <div class="segunda">
-            <img src="./bela.jfif" alt="imagem ilustrativa da bela">
+            <img src="./belaa.png" alt="imagem ilustrativa da Bela">
+            <p>Beauty and the Beast é um filme musical estadunidense do género fantasia romântica, dirigido por Bill Condon e escrito por Stephen Chbosky e Evan Spiliotopoulos. É uma produção da Walt Disney Pictures, baseado no conto de fadas homónimo de Jeanne-Marie Leprince de Beaumont e no filme de animação de 1991 da Disney. <br>O elenco principal é formado por Emma Watson, Dan Stevens, Luke Evans, Kevin Kline, Josh Gad, Ewan McGregor, Stanley Tucci, Audra McDonald, Gugu Mbatha-Raw, Ian McKellen e Emma Thompson. No filme, Bela é feita prisioneira de uma fera temível no seu castelo encantado e aprende a olhar além da sua aparência, evitando um caçador narcisista que procura casar com ela.</p>
+            <img src="./feraa.png" alt="imagem ilustrativa da Fera">
+        </div>
+        <div class="terceira">
+            <img src="./5dd90c6cb6409e804ed556f4f86f3cbe.jpg" alt="">
+            <img src="./R (1).jpeg" alt="">
+            <img src="./R.jpeg" alt="">
         </div>
     </main>
 </body>
