--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <img src="./feraa.png" alt="imagem ilustrativa da Fera">
         </div>
         <div class="terceira">
-            <img src="./5dd90c6cb6409e804ed556f4f86f3cbe.jpg" alt="">
-            <img src="./R (1).jpeg" alt="">
-            <img src="./R.jpeg" alt="">
+            <img src="./5dd90c6cb6409e804ed556f4f86f3cbe.jpg" alt="imagem do filme">
+            <img src="./R (1).jpeg" alt="imagem do filme">
+            <img src="./R.jpeg" alt="imagem ilustrativa dos objetos magicos">
         </div>
     </main>
 </body>
